# VkDynasty

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
cmake/: ShaderCompile.cmake
engine/: CMakeLists.txt
engine/assert/: assets.json
engine/asset/: assets.json
engine/asset/global/: rendering.global.json
engine/asset/objects/Animation/: license.txt  scene.gltf
engine/asset/objects/Capoeira/: Capoeira.fbx
engine/asset/objects/Hand/: license.txt  scene.gltf
engine/asset/objects/Sunwukong/: license.txt  scene.gltf
engine/asset/objects/felix-richter-idle-animation/source/: Felix.FBX
engine/asset/objects/felix_richter_idle_animation/: license.txt  scene.gltf
engine/shader/: CMakeLists.txt
engine/shader/glsl/: base.frag  base.vert  blinn_phong.frag  blinn_phong.vert  combine_ui.frag  combine_ui.vert  mesh.frag  mesh.vert  pbr.frag  pbr.vert  shader_base.frag  shader_base.vert
engine/shader/json/: base_frag.json  base_vert.json  blinn_phong_frag.json  blinn_phong_vert.json  pbr_frag.json
engine/source/: CMakeLists.txt  DynastyEditorUI.cpp  DynastyEditorUI.h  DynastyEngine.cpp  DynastyEngine.h  DynastyEngine2.cpp  DynastyEngine2.h  DynastyViewer.cpp  DynastyViewer.h  main.cpp
engine/source/code/base/: Buffer.h  GLMInc.h  Geometry.cpp  Geometry.h  Platform.h  ThreadPool.h  Timer.cpp  Timer.h  UUID.h  macro.h
engine/source/code/log/: LogSystem.cpp  LogSystem.h
engine/source/code/util/: FIleUtils.h  HashUtils.h  ImageUtils.cpp  ImageUtils.h  MemoryUtils.h  StringUtils.h
engine/source/editor/: CMakeLists.txt  DynastyEditor.h  DynastyEditorUI.cpp  DynastyEditorUI.h  Editor.cpp  Editor.h  EditorUI.cpp  EditorUI.h  main.cpp
engine/source/editor/global/: GlobalContext.cpp  GlobalContext.h
engine/source/editor/managers/: EditorInputManager.cpp  EditorInputManager.h  EditorSceneManager.cpp  EditorSceneManager.h
engine/source/editor/panels/: ConfigPanel.cpp  ConfigPanel.h  ContentBrowserPanel.cpp  ContentBrowserPanel.h  EngineSettingsPanel.cpp  EngineSettingsPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  SceneSettingsPanel.cpp  SceneSettingsPanel.h
engine/source/function/: Animation.h  Animator.h  Animdata.h  Bone.h  Camera.cpp  Camera.h  Config.h  ConfigPanel.cpp  ConfigPanel.h  Cube.h  Geometry.h  Material.cpp  Material.h  Model.h  ModelLoader.cpp  ModelLoader.h  OrbitController.cpp  OrbitController.h  Texture.h  Uniform.h  Vertex.h
engine/source/imgui/: ImGuiLayer.cpp  ImGuiLayer.h
engine/source/platform/vulkan/: VulkanImGuiLayer.cpp  VulkanImGuiLayer.h
engine/source/render/: EnumsVulkan.h  FrameBuffer.cpp  FrameBuffer.h  PipelineStates.cpp  PipelineStates.h  PiplelineStates.h  RenderStates.h  Renderer.cpp  Renderer.h  ShaderProgram.cpp  ShaderProgram.h  TextureVulkan.cpp  TextureVulkan.h  UniformVulkan.h  VertexVulkan.h  VulkanContext.cpp  VulkanContext.h  VulkanGLInterop.cpp  VulkanGLInterop.h  VulkanUtils.h
engine/source/runtime/: CMakeLists.txt  Engine.cpp  Engine.h  Viewer.cpp  Viewer.h  main.cpp
engine/source/runtime/animation/: Animation.h  Animator.h  Animdata.h  Bone.h
engine/source/runtime/code/base/: Buffer.h  PublicSingleton.h  UUID.h  macro.h
engine/source/runtime/code/log/: LogSystem.h
engine/source/runtime/code/math/: math.cpp  math.h  quaternion.cpp  quaternion.h  random.h
engine/source/runtime/code/util/: FIleUtils.h  ImageUtils.h  MemoryUtils.h
engine/source/runtime/debug/: DebugManager.cpp  DebugManager.h
engine/source/runtime/framework/component/: Component.h
engine/source/runtime/framework/component/audio/: SoundComponent.cpp  SoundComponent.h
engine/source/runtime/framework/component/base/: IDComponent.cpp  IDComponent.h  TagComponent.cpp  TagComponent.h
engine/source/runtime/framework/component/camera/: CameraComponent.cpp  CameraComponent.h
engine/source/runtime/framework/entity/: Entity.cpp  Entity.h
engine/source/runtime/framework/level/: Level.cpp  Level.h
engine/source/runtime/framework/serializer/: HeSerializer.cpp  HeSerializer.h  JsonSerializer.cpp  JsonSerializer.h  Serializer.h
engine/source/runtime/framework/system/: System.h
engine/source/runtime/framework/system/audio/: AudioScriptSystem.cpp  AudioScriptSystem.h
engine/source/runtime/framework/system/physics/: PhysicsSystem.cpp  PhysicsSystem.h
engine/source/runtime/framework/system/script/: LuaScriptSystem.cpp  LuaScriptSystem.h  NativeScriptSystem.cpp  NativeScriptSystem.h  PythonScriptSystem.cpp  PythonScriptSystem.h
engine/source/runtime/function/: Camera.cpp  Camera.h  Config.h  Geometry.cpp  Geometry.h  Material.h  Model.h  ModelLoader.cpp  ModelLoader.h  OrbitController.cpp  OrbitController.h  Texture.h  Uniform.h  Vertex.h
engine/source/runtime/global/: GlobalContext.cpp  GlobalContext.h
engine/source/runtime/imgui/: ImGuiLayer.h
engine/source/runtime/platform/: PlatformUtils.cpp  PlatformUtils.h  WindowSystem.cpp  WindowSystem.h  WindowUtils.cpp
engine/source/runtime/platform/vulkan/: VulkanAPI.cpp  VulkanAPI.h  VulkanImGuiLayer.cpp  VulkanImGuiLayer.h  VulkanUtil.cpp  VulkanUtil.h
engine/source/runtime/render/: EnumsVulkan.h  FrameBuffer.h  PipelineStates.h  RenderCamera.cpp  RenderCamera.h  RenderMesh.h  RenderPass.cpp  RenderPass.h  RenderPipeline.cpp  RenderPipeline.h  RenderResource.cpp  RenderResource.h  RenderStates.h  RenderSystem.cpp  RenderSystem.h  Renderer.cpp  Renderer.h  ShaderProgram.cpp  ShaderProgram.h  TextureVulkan.h  UniformVulkan.h  VertexVulkan.h  VulkanContext.cpp  VulkanContext.h  VulkanUtils.h
engine/source/runtime/render/passes/: CombineUIPass.cpp  CombineUIPass.h  MainCameraPass.cpp  MainCameraPass.h  UIPass.cpp  UIPass.h
engine/source/runtime/resource/asset/: AssetManager.cpp  AssetManager.h
engine/source/runtime/resource/config/: CameraConfig.h  ConfigManager.cpp  ConfigManager.h  GlobalRendering.h
engine/source/runtime/resource/model/: ModelManager.cpp  ModelManager.h
engine/source/runtime/ui/: WindowUI.cpp  WindowUI.h
notes/: 骨骼动画.md
